--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -1,7 +1,7 @@
 <div class="container my-5">
     <div class="jumbotron">
 
-      <h1>Usuario no encontrado, Por favor registrese:</h1>
+      <h1>REGISTRO:</h1>
       <br>
       <form class="form" action="/register" method="post" role="form" autocomplete="off">
 
