--- a/src/views/partials/carrito.hbs
+++ b/src/views/partials/carrito.hbs
@@ -1,11 +1,9 @@
-<h1>este es el carrito </h1>
-<div>
-
+<div class="carrito">
     <table class="table">
   <thead>
     <tr>
-      <th scope="col">carrito ID = </th>
-      <th scope="col">productos = </th>
+      <th scope="col">numero de carrito:</th>
+      <th scope="col">productos elegidos:</th>
 
 
     </tr>
@@ -26,3 +24,10 @@
 <button class="btn btn-primary" onclick="location.href='/enviarMensajes'" >finalizar compra</button>
 
 </div>
+
+<style>
+  .carrito{
+    border: black solid;
+    margin: 50px 20px 50px 20px;
+  }
+</style>
