--- a/src/views/partials/productos.hbs
+++ b/src/views/partials/productos.hbs
@@ -1,4 +1,4 @@
-<h1>estos son los productos </h1>
+
 <table class="table table-dark table-striped">
     <thead>
         <tr>
@@ -9,6 +9,8 @@
             <th scope="col">foto</th>
             <th scope="col">precio</th>
             <th scope="col">stock</th>
+            <th scope="col"></th>
+
         </tr>
     </thead>
            
@@ -29,4 +31,10 @@
                     </td>
                 </tr>
             {{/each}}    
-    </tbody
+    </tbody>
+
+    <style>
+        table {
+            margin: 0 20px 0 20px;
+        }
+    </style>
