--- a/src/views/partials/user_logged.hbs
+++ b/src/views/partials/user_logged.hbs
@@ -1,4 +1,14 @@
-<h3> hola {{nombre}} </h3>
-<div>
-    <img width="50" src="{{avatar}}" alt="not found">
+<div class="user">
+    <h3> hola {{nombre}} </h3>
+    <div>
+        <img width="50" src="{{avatar}}" alt="not found">
+    </div>
+
 </div>
+
+<style>
+    .user{
+        text-align: right;
+        margin-right: 50px;
+    }
+</style>
